--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -8,8 +8,16 @@
   font-optical-sizing: auto;
   
 }
+
+/* share style */
+
+.color-green{
+    color: #30b868;
+}
+
 header{
- 
+    width: 100%;
+ max-width: 1600px;
 }
 nav{
     display: flex;
@@ -43,6 +51,36 @@ nav button {
     padding: 12px;
     border-radius: 5px;
 }
+#banner{
+    width: 100%;
+    max-width: 1600px;
+    background-image: url("../assets/hero-bg.png");
+}
+#banner .banner-content{
+   max-width: 1360px;
+   display: flex;
+   align-items: center;
+}
+#banner .banner-content h5{
+    max-width: 229px;
+    font-size: 16px;
+    color: #30b868;
+    background-color: white;
+    padding: 8px 12px;
+    border: 0;
+    border-radius: 15px;
+    margin-bottom: 16px;
+    
+}
+#banner .banner-content p{
+    font-size: 16px;
+    color: white;
+    line-height: 30px;
+}
+
+
+
+
 
 
 
