--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -14,6 +14,20 @@
 .color-green{
     color: #30b868;
 }
+.btn{
+     font-size: 16px;
+    font-weight: 600;
+    color: white;
+    margin: 24px auto;
+    cursor: pointer;
+    background-color: #30b868;
+    border: 0px;
+    padding: 12px;
+    border-radius: 5px;
+    gap: 10px;
+  
+}
+
 
 header{
     width: 100%;
@@ -45,37 +59,306 @@ nav button {
     font-weight: 600;
     color: white;
     margin: 24px auto;
-    font-size: ;
+    cursor: pointer;
     background-color: #30b868;
     border: 0px;
     padding: 12px;
     border-radius: 5px;
 }
+
 #banner{
-    width: 100%;
-    max-width: 1600px;
-    background-image: url("../assets/hero-bg.png");
+  width: 100%;
+  max-width: 1660px;
+  background-image: url("../assets/hero-bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+ 
+  
 }
-#banner .banner-content{
-   max-width: 1360px;
-   display: flex;
-   align-items: center;
-}
-#banner .banner-content h5{
-    max-width: 229px;
-    font-size: 16px;
-    color: #30b868;
-    background-color: white;
-    padding: 8px 12px;
-    border: 0;
-    border-radius: 15px;
-    margin-bottom: 16px;
+#banner .banner-container{
+    width: 85%;
+    max-width: 1360px;
+    margin: 0px auto;
+    padding: 115px 120px 180px;
+    
     
 }
-#banner .banner-content p{
+#banner .banner-section{
+
+     align-items: center;
+    
+
+}
+#banner .banner-section h5{
+    max-width: 230px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #30b868;
+    border: 8px;
+    border-radius: 20px;
+    background-color: white;
+    padding: 8px 12px 8px 34px;
+    margin: 8px auto 24px;
+    
+
+}
+#banner .banner-section h1{
+    font-size: 72px;
+    font-weight: 700;
+    max-width: 770px;
+    line-height: 84px;
+    text-align: center;
+    margin: 16px auto;
+  
+}
+#banner .banner-section p{
+    width: 85%;
+    max-width: 1360px;
+    font-size: 16px;
+    line-height: 24px;
+    color: white;
+    margin: 16px auto;
+    text-align: center;
+}
+#banner .banner-section button{
+    max-width: 465px;
+    gap: 16px;  
+    align-items: center; 
+     
+}
+#banner .banner-section button img{
+    align-items: center;
+}
+#banner .banner-container .Secondary-btn{
+    font-size: 16px;
+    font-weight: 600;
+    margin: 24px auto;
+    border: 1px solid ; 
+    padding: 12px 16px;
+    border-radius: 5px;
+    background:none ;
+    color: white;
+    cursor: pointer;
+    align-items: center;
+    
+}
+#about-section{
+    width: 85%;
+    max-width: 1360px;
+    padding:0px 120px ;
+    align-items: center;
+   
+}
+#about-section .about-section{
+    width: 85%;
+    max-width: 1360px;
+   
+}
+#about-section .about-section h2{
+    width: 85%;
+    max-width: 1360px;
+    font-size: 48px;
+    font-weight: bold;
+    align-items: center;
+
+}
+#about-section .about-section p{
+    font-size: 16px;
+    align-items: center;
+    color: #627382;
+}
+#skills{
+    padding-top: 100px;
+    width: 85%;
+    max-width: 1360px;
+    margin: 0 auto;
+}
+#skills .skills-container{
+    width: 85%;
+    max-width: 1360px;
+    margin: 0 auto;
+    text-align: center;
+    
+}
+#skills .skills-container h2{
+    font-size: 48px;
+    font-weight: bold;
+    margin-bottom: 16px;
+}
+#skills .skills-container p{
+    font-size: 16px;
+    color: #627382;
+}
+
+#skills .skills-container .skills-box{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    margin-top: 44px;
+    justify-content: ;
+}
+.skills-box .skill-cards{
+    max-width: 322px;
+    min-height: 300px;
+    padding: 10px;
+    border: 1px solid white;
+    border-radius: 3px;
+    max-width: 267px;
+    box-shadow: 0 6px 50px 0 #0000004e ;
+    margin-bottom: 16px;
+    gap: 16px;
+
+}
+.skill-cards img{
+    max-width: 60px;
+    margin:40px 60px 10px;
+    border: 0px;
+    padding: 10px;
+    background-color: red;
+    border-radius: 50%;
+    align-items: center;
+}
+.skill-cards h3{
+    margin-bottom: 15px;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 28px;
+    color: #181818;
+}
+.skill-cards p{
+    font-size: 20px;
+    line-height: 20px;
+    color: #757575;
+    
+}
+#portfolio{
+    margin-top: 100px;
+    width: 85%;
+    max-width: 1360px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 60px;
+}
+
+#portfolio .portfolio-content{
+    width: 85% ;
+    max-width: 1360px;
+    padding: 120px;
+}
+
+.portfolio-list li{
+    font-size: 16px;
+    font-weight: 500;
+    list-style-type: none;
+    padding: 16px;
+
+} 
+.portfolio-list img{
+   
+}
+
+#portfolio .portfolio-content h5{
+    font-size: 16px;
+    font-weight: 500;
+    color: #30b868;
+    margin: 100px auto 16px;
+    
+}
+#portfolio .portfolio-content h2{
+    font-size:48px ;
+    font-weight: bold;
+    margin-bottom: 16px;
+    line-height: 58px;
+    text-align: left;
+    padding-right: 55px ;
+}
+#portfolio .portfolio-content p{
+    font-size: 16px;
+    color: #627382;
+    line-height: 20px;
+}
+
+#about .about-container{
+    width: 85%;
+    max-width: 1280px;
+    text-align: center;
+    background-color: #F7F6F2;
+    padding: 81px 76px;
+    margin: 0 auto;
+    
+}
+.section-heading{
+    max-width: 1360px;
+    text-align: center;
+}
+#about{
+    margin: 100px auto;
+    padding: ;
+}
+#about .about-container h2{
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+#about .about-container p{
+    font-size: 18px;
+    margin-bottom: 20px;
+    padding: 0 130px;
+    line-height: 30px;
+    color: #627382;
+
+}
+#about .about-container button{
+    display: flex;
+    gap: 10px;
+}
+#about .about-container h5{
+    font-size: 16px;
+    font-weight: 400;
+    color: #627382;
+}
+
+.footer-section{
+    background: #001036;
+    padding-top: 100px ;
+}
+.footer-container{
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 120px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.footer-logo{
+    width: 139px;
+    align-items: center;
+
+}
+.footer-text{
     font-size: 16px;
     color: white;
-    line-height: 30px;
+    margin-top: 140px ;
+}
+.footer-social h3{
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+    display: block;
+    margin-bottom:6px ;
+
+}
+.social-icons{
+    display: flex;
+    gap: 10px;
+    
+}
+.social-icons a{
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    border-radius: 50%;
 }
 
 
