--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -114,6 +114,7 @@ nav button {
     line-height: 84px;
     text-align: center;
     margin: 16px auto;
+    color: white;
   
 }
 #banner .banner-section p{
@@ -281,6 +282,7 @@ nav button {
     font-weight: 500;
     color: #30b868;
     margin: 50px auto 16px;
+    padding-left: 20px;
     
 }
 #portfolio .portfolio-content h2{
@@ -289,13 +291,15 @@ nav button {
     margin-bottom: 16px;
     line-height: 48px;
     text-align: left;
-    padding-right: 55px ;
+    padding:0 20px ;
+    /* padding-right: 55px ; */
 }
 #portfolio .portfolio-content p{
     font-size: 16px;
     color: #627382;
     line-height: 20px;
-    padding-right: 60px;
+    padding:0 20px;
+    margin-bottom: 20px;
 }
 #portfolio .portfolio-list{
     
